[gd_scene load_steps=3 format=3 uid="uid://bgo0i3gx6ummt"]

[ext_resource type="Script" path="res://UI/Scenes/PauseMenu.gd" id="1_2udbm"]
[ext_resource type="Script" path="res://Utilities/sound_slider.gd" id="2_5u3pl"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2udbm")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1926.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.235294)

[node name="ResumeButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -314.0
offset_right = 178.0
offset_bottom = -208.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -188.0
offset_right = 178.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
text = "Back to Main Menu"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -59.0
offset_right = 178.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit to Desktop"

[node name="MusicSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = 116.0
offset_right = 330.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource("2_5u3pl")
bus_name = "Music"

[node name="SliderLabel" type="Label" parent="MusicSlider"]
layout_mode = 0
offset_left = -171.0
offset_top = -4.0
offset_right = -12.0
offset_bottom = 62.0
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = 189.0
offset_right = 332.0
offset_bottom = 251.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource("2_5u3pl")
bus_name = "SFX"

[node name="SliderLabel" type="Label" parent="SoundSlider"]
layout_mode = 0
offset_left = -171.0
offset_top = -4.0
offset_right = -12.0
offset_bottom = 62.0
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ResumeButton" to="." method="closeMenu"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
